# Delivery

./: .dockerignore  .gitignore  CLAUDE.md  CSV_IMPORT_POLICY.md  DAILY_LOG_DESIGN.md  Dockerfile  NEW_CSV_FORMAT.md  deploy.sh  firestore.rules  pyproject.toml  unified-csv-spec.md  unified-csv-template.csv
delivery/: __init__.py  config.py  firebase_client.py  models.py  schemas.py
delivery/api/: app.py
delivery/api/routes/: checkin.py  csv_freshness.py  daily_logs.py  deliveries.py  ingest.py  items.py  notes.py  storage.py
delivery/parser/: __init__.py  base.py  csv_parser.py  high_count_parser.py  inventory_parser.py  pdf_parser.py  product_parser.py
delivery/services/: csv_picker.py  csv_snapshot_service.py  daily_log_service.py  delivery_service.py  firebase_storage.py
delivery/static/: app.js  index.html  note-examples.html  styles.css
docs/: handoff.html  reference-card.html
scripts/: parse_pdf.py
tests/: test_pdf_parser.py  test_product_parser.py
