[project]
name = "delivery"
version = "0.1.0"
description = "Produce delivery worksheet parser and check-in app"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "firebase-admin>=6.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
